Updating spine2d to 3.6 [43f37ce5657f8c5a3812b467811b7ee85296ea13] Minor update to client network connection logic.
Former-commit-id: 7054202fad912460933a4ef8adead7b185a0f94f [formerly 6074139824229b6f3c5230adee5b3bc86ff0d866]
Former-commit-id: 12b2b99e9d408af27dabcea4f7d2ac1da391e6fe

--- a/BindstoneGameServer.vcxproj
+++ b/BindstoneGameServer.vcxproj
@@ -280,6 +280,7 @@
     <ClCompile Include="..\external\spine\Animation.c" />
     <ClCompile Include="..\external\spine\AnimationState.c" />
     <ClCompile Include="..\external\spine\AnimationStateData.c" />
+    <ClCompile Include="..\external\spine\Array.c" />
     <ClCompile Include="..\external\spine\Atlas.c" />
     <ClCompile Include="..\external\spine\AtlasAttachmentLoader.c" />
     <ClCompile Include="..\external\spine\Attachment.c" />
@@ -287,6 +288,8 @@
     <ClCompile Include="..\external\spine\Bone.c" />
     <ClCompile Include="..\external\spine\BoneData.c" />
     <ClCompile Include="..\external\spine\BoundingBoxAttachment.c" />
+    <ClCompile Include="..\external\spine\ClippingAttachment.c" />
+    <ClCompile Include="..\external\spine\Color.c" />
     <ClCompile Include="..\external\spine\Event.c" />
     <ClCompile Include="..\external\spine\EventData.c" />
     <ClCompile Include="..\external\spine\extension.c" />
@@ -297,9 +300,12 @@
     <ClCompile Include="..\external\spine\PathAttachment.c" />
     <ClCompile Include="..\external\spine\PathConstraint.c" />
     <ClCompile Include="..\external\spine\PathConstraintData.c" />
+    <ClCompile Include="..\external\spine\PointAttachment.c" />
     <ClCompile Include="..\external\spine\RegionAttachment.c" />
     <ClCompile Include="..\external\spine\Skeleton.c" />
+    <ClCompile Include="..\external\spine\SkeletonBinary.c" />
     <ClCompile Include="..\external\spine\SkeletonBounds.c" />
+    <ClCompile Include="..\external\spine\SkeletonClipping.c" />
     <ClCompile Include="..\external\spine\SkeletonData.c" />
     <ClCompile Include="..\external\spine\SkeletonJson.c" />
     <ClCompile Include="..\external\spine\Skin.c" />
@@ -307,7 +313,9 @@
     <ClCompile Include="..\external\spine\SlotData.c" />
     <ClCompile Include="..\external\spine\TransformConstraint.c" />
     <ClCompile Include="..\external\spine\TransformConstraintData.c" />
+    <ClCompile Include="..\external\spine\Triangulator.c" />
     <ClCompile Include="..\external\spine\VertexAttachment.c" />
+    <ClCompile Include="..\external\spine\VertexEffect.c" />
     <ClCompile Include="Source\ArtificialIntelligence\pathfinding.cpp" />
     <ClCompile Include="Source\bindstoneGameServerMain.cpp" />
     <ClCompile Include="Source\DiggerGame\diggerGame.cpp" />
@@ -514,6 +522,7 @@
     <ClInclude Include="..\external\spine\Animation.h" />
     <ClInclude Include="..\external\spine\AnimationState.h" />
     <ClInclude Include="..\external\spine\AnimationStateData.h" />
+    <ClInclude Include="..\external\spine\Array.h" />
     <ClInclude Include="..\external\spine\Atlas.h" />
     <ClInclude Include="..\external\spine\AtlasAttachmentLoader.h" />
     <ClInclude Include="..\external\spine\Attachment.h" />
@@ -521,19 +530,26 @@
     <ClInclude Include="..\external\spine\Bone.h" />
     <ClInclude Include="..\external\spine\BoneData.h" />
     <ClInclude Include="..\external\spine\BoundingBoxAttachment.h" />
+    <ClInclude Include="..\external\spine\ClippingAttachment.h" />
+    <ClInclude Include="..\external\spine\Color.h" />
+    <ClInclude Include="..\external\spine\dll.h" />
     <ClInclude Include="..\external\spine\Event.h" />
     <ClInclude Include="..\external\spine\EventData.h" />
     <ClInclude Include="..\external\spine\extension.h" />
     <ClInclude Include="..\external\spine\IkConstraint.h" />
     <ClInclude Include="..\external\spine\IkConstraintData.h" />
     <ClInclude Include="..\external\spine\Json.h" />
+    <ClInclude Include="..\external\spine\kvec.h" />
     <ClInclude Include="..\external\spine\MeshAttachment.h" />
     <ClInclude Include="..\external\spine\PathAttachment.h" />
     <ClInclude Include="..\external\spine\PathConstraint.h" />
     <ClInclude Include="..\external\spine\PathConstraintData.h" />
+    <ClInclude Include="..\external\spine\PointAttachment.h" />
     <ClInclude Include="..\external\spine\RegionAttachment.h" />
     <ClInclude Include="..\external\spine\Skeleton.h" />
+    <ClInclude Include="..\external\spine\SkeletonBinary.h" />
     <ClInclude Include="..\external\spine\SkeletonBounds.h" />
+    <ClInclude Include="..\external\spine\SkeletonClipping.h" />
     <ClInclude Include="..\external\spine\SkeletonData.h" />
     <ClInclude Include="..\external\spine\SkeletonJson.h" />
     <ClInclude Include="..\external\spine\Skin.h" />
@@ -542,7 +558,9 @@
     <ClInclude Include="..\external\spine\spine.h" />
     <ClInclude Include="..\external\spine\TransformConstraint.h" />
     <ClInclude Include="..\external\spine\TransformConstraintData.h" />
+    <ClInclude Include="..\external\spine\Triangulator.h" />
     <ClInclude Include="..\external\spine\VertexAttachment.h" />
+    <ClInclude Include="..\external\spine\VertexEffect.h" />
     <ClInclude Include="Source\ArtificialIntelligence\pathfinding.h" />
     <ClInclude Include="Source\DiggerGame\diggerGame.h" />
     <ClInclude Include="Source\Editor\anchorEditor.h" />
@@ -633,11 +651,7 @@
   <ItemGroup>
     <None Include="..\external\cereal\include\cereal\external\rapidxml\manual.html" />
     <None Include="..\external\spine\LICENSE" />
-    <None Include="..\external\spine\README.md" />
     <None Include="ClassDiagram.cd" />
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="..\external\spine\CMakeLists.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
