Updates/fixes to network, temporarily making game server render.
Former-commit-id: a9e2cacd11d0d1202364ead6b4a89bc03ab6e1a5 [formerly f708f40e2425a78b298ceeff60da8214bcfa41d4]
Former-commit-id: bc3d0257e3986fa5b011d502baa475bfcaeac950

--- a/BindstoneLobby.vcxproj
+++ b/BindstoneLobby.vcxproj
@@ -333,6 +333,7 @@
     <ClCompile Include="Source\Game\managers.cpp" />
     <ClCompile Include="Source\Game\NetworkLayer\accountActions.cpp" />
     <ClCompile Include="Source\Game\NetworkLayer\clientActions.cpp" />
+    <ClCompile Include="Source\Game\NetworkLayer\gameServer.cpp" />
     <ClCompile Include="Source\Game\NetworkLayer\gameServerActions.cpp" />
     <ClCompile Include="Source\Game\NetworkLayer\lobbyServer.cpp" />
     <ClCompile Include="Source\Game\player.cpp" />
@@ -577,6 +578,7 @@
     <ClInclude Include="Source\Game\managers.h" />
     <ClInclude Include="Source\Game\NetworkLayer\accountActions.h" />
     <ClInclude Include="Source\Game\NetworkLayer\clientActions.h" />
+    <ClInclude Include="Source\Game\NetworkLayer\gameServer.h" />
     <ClInclude Include="Source\Game\NetworkLayer\gameServerActions.h" />
     <ClInclude Include="Source\Game\NetworkLayer\lobbyServer.h" />
     <ClInclude Include="Source\Game\NetworkLayer\networkAction.h" />
